# sqlflag

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-17-sqlflag.md  2026-03-21-code-review-fixes.md  2026-03-21-flatten-table-group.md  2026-04-14-shell-completion.md
docs/superpowers/specs/: 2026-03-17-sqlflag-design.md  2026-03-20-flatten-table-group.md  2026-03-21-remove-adapter-abc.md
src/sqlflag/: __init__.py  __main__.py  cli.py  formatter.py  parser.py  query.py  schema.py
src/sqlflag/adapters/: __init__.py  argparse_adapter.py  click_adapter.py  typer_adapter.py
src/sqlflag/formats/: __init__.py  arkiv.py  csv.py  json.py  table.py
tests/: conftest.py  test_cli.py  test_formatter.py  test_parser.py  test_query.py  test_schema.py
