[project]
name = "sqlflag"
version = "0.3.0"
description = "Auto-generate CLIs from SQLite databases. Tables become subcommands, columns become filter flags."
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Alexander Towell", email = "lex@metafunctor.com" },
]
keywords = ["sqlite", "cli", "database", "query", "flags"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
]
dependencies = [
    "sqlite-utils>=3.35",
    "rich>=13",
]

[project.optional-dependencies]
typer = ["typer>=0.9"]
dev = [
    "pytest>=7",
    "pytest-cov",
    "typer>=0.9",
]

[project.urls]
Homepage = "https://github.com/queelius/sqlflag"
Repository = "https://github.com/queelius/sqlflag"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sqlflag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
