[project]
name = "sqlflag"
version = "0.6.0"
description = "Auto-generate CLIs from SQLite databases. Tables become subcommands, columns become filter flags."
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Alexander Towell", email = "lex@metafunctor.com" },
]
keywords = ["sqlite", "cli", "database", "query", "flags"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
]
dependencies = [
    "sqlite-utils>=3.35",
    "rich>=13",
    "click>=8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
]

[project.scripts]
sqlflag = "sqlflag.__main__:main"

[project.urls]
Homepage = "https://github.com/queelius/sqlflag"
Repository = "https://github.com/queelius/sqlflag"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sqlflag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
