[project]
name = "sqlflag"
version = "0.6.0"
description = "Auto-generate CLIs from SQLite databases. Tables become subcommands, columns become filter flags."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Alexander Towell", email = "lex@metafunctor.com" },
]
keywords = ["sqlite", "cli", "database", "query", "flags", "completion", "shell"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Utilities",
]
dependencies = [
    "sqlite-utils>=3.35",
    "rich>=13",
    "click>=8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
]

[project.scripts]
sqlflag = "sqlflag.__main__:main"

[project.urls]
Homepage = "https://github.com/queelius/sqlflag"
Repository = "https://github.com/queelius/sqlflag"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sqlflag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
